<resources>
    <string name="action_settings">Settings</string>
    <string name="subsonic_ping">Ping</string>
    <string name="subsonic_artists">Get artists</string>
    <string name="sort_by_artist">Sort by artist</string>
    <string name="sort_by_song">Sort by song</string>
    <string name="sort_entries">Sort selected entries</string>
    <string name="refresh">Refresh</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_library_clear">Clear library</string>
    <string name="pref_library_clear_summary">Clear local data from selected library sources</string>
    <string name="pref_library_clear_dialog_title">Clear local library data</string>
    <string name="pref_library_clear_playlists">Clear playlists</string>
    <string name="pref_library_clear_playlists_summary">Clear local playlist data from selected library sources</string>
    <string name="pref_library_clear_playlists_dialog_title">Clear local playlist data</string>
    <string name="pref_about">About</string>
    <string name="pref_backend_new">Add new backend</string>
    <string name="pref_backend_new_dialog_title">Add new backend</string>
    <string name="pref_backend_config_api_general">general</string>
    <string name="pref_backend_config_api_subsonic">subsonic</string>
    <string name="pref_backend_config_api_git">git</string>
    <string name="pref_backend_config_general_id">ID</string>
    <string name="pref_backend_config_general_id_dialog_title">Customize ID</string>
    <string name="pref_backend_config_general_id_dialog_message">The default ID does not need to be changed unless there is a special use case. Leave blank to use the default ID.\n\nWhen changing the ID you must:\n- Manually clear the local data for the old ID.\n- Refresh the backend for changes to take effect.</string>
    <string name="pref_backend_config_general_enabled">Enabled</string>
    <string name="pref_backend_config_general_tag_delim">Tag delimiter</string>
    <string name="pref_backend_config_general_refresh_enabled">Enable scheduled refresh</string>
    <string name="pref_backend_config_general_refresh_time">Scheduled refresh time</string>
    <string name="pref_backend_config_general_refresh">Refresh library now</string>
    <string name="pref_backend_config_general_delete">Delete</string>
    <string name="pref_backend_config_general_delete_dialog_title">Confirm backend deletion</string>
    <string name="pref_backend_config_general_delete_dialog_message">Local data for the backend must be manually cleared after deletion.</string>
    <string name="pref_backend_config_subsonic_name">Subsonic</string>
    <string name="pref_backend_config_subsonic_url">Subsonic URL</string>
    <string name="pref_backend_config_subsonic_usr">Subsonic username</string>
    <string name="pref_backend_config_subsonic_pwd">Subsonic password</string>
    <string name="pref_backend_config_git_name">Git</string>
    <string name="pref_key_library_clear">se.splushii.dancingbunnies.pref_library_clear</string>
    <string name="pref_key_library_clear_playlists">se.splushii.dancingbunnies.pref_library_clear_playlists</string>
    <string name="pref_key_about">se.splushii.dancingbunnies.pref_about</string>
    <string name="pref_key_backend_id_counter">se.splushii.dancingbunnies.pref_backend_id_counter</string>
    <string name="pref_key_backend">se.splushii.dancingbunnies.pref_backend</string>
    <string name="pref_key_backend_new">se.splushii.dancingbunnies.pref_backend.new</string>
    <string name="pref_key_backend_config_prefix">se.splushii.dancingbunnies.pref_backend_config</string>
    <string name="pref_key_backend_config_suffix_general_api">api</string>
    <string name="pref_key_backend_config_suffix_general_id">id</string>
    <string name="pref_key_backend_config_suffix_general_enabled">enabled</string>
    <string name="pref_key_backend_config_suffix_general_tag_delim">tag_delim</string>
    <string name="pref_key_backend_config_suffix_general_refresh">refresh</string>
    <string name="pref_key_backend_config_suffix_general_refresh_enabled">refresh_enabled</string>
    <string name="pref_key_backend_config_suffix_general_refresh_time">refresh_time</string>
    <string name="pref_key_backend_config_suffix_general_refresh_last_sync">refresh_last_sync</string>
    <string name="pref_key_backend_config_suffix_general_delete">delete</string>
    <string name="pref_key_backend_config_suffix_subsonic_url">url</string>
    <string name="pref_key_backend_config_suffix_subsonic_usr">usr</string>
    <string name="pref_key_backend_config_suffix_subsonic_pwd">pwd</string>
    <string name="pref_key_playbackcontroller_player">se.splushii.dancingbunnies.pref_playbackcontroller_player</string>
    <string name="pref_key_playbackcontroller_play_when_ready">se.splushii.dancingbunnies.pref_playbackcontroller_play_when_ready</string>
    <string name="pref_key_playbackcontroller_playback_id_counter">se.splushii.dancingbunnies.pref_playbackcontroller_playback_id_counter</string>
    <string name="pref_key_playbackcontroller_playlist_selection_id_counter">se.splushii.dancingbunnies.pref_playbackcontroller_playlist_selection_id_counter</string>
    <string name="pref_key_playbackcontroller_playlist_src">se.splushii.dancingbunnies.pref_playbackcontroller_playlist_src</string>
    <string name="pref_key_playbackcontroller_playlist_id">se.splushii.dancingbunnies.pref_playbackcontroller_playlist_id</string>
    <string name="pref_key_playbackcontroller_playlist_type">se.splushii.dancingbunnies.pref_playbackcontroller_playlist_type</string>
    <string name="pref_key_playbackcontroller_playlist_position">se.splushii.dancingbunnies.pref_playbackcontroller_playlist_position</string>
    <string name="pref_key_playbackcontroller_playlist_playback_position">se.splushii.dancingbunnies.pref_playbackcontroller_playlist_playback_position</string>
    <string name="pref_key_playbackcontroller_playlist_selection_id">se.splushii.dancingbunnies.pref_playbackcontroller_playlist_selection_id</string>
    <string name="pref_key_playbackcontroller_playlist_playback_order">se.splushii.dancingbunnies.pref_playbackcontroller_playlist_playback_order</string>
    <string name="pref_key_playbackcontroller_playlist_playback_repeat">se.splushii.dancingbunnies.pref_playbackcontroller_playlist_playback_repeat</string>
    <string name="pref_key_localaudioplayer_current_src">se.splushii.dancingbunnies.pref_localaudioplayer_current_src</string>
    <string name="pref_key_localaudioplayer_current_id">se.splushii.dancingbunnies.pref_localaudioplayer_current_id</string>
    <string name="pref_key_localaudioplayer_current_playback_type">se.splushii.dancingbunnies.pref_localaudioplayer_current_playback_type</string>
    <string name="pref_key_localaudioplayer_current_playback_id">se.splushii.dancingbunnies.pref_localaudioplayer_current_playback_id</string>
    <string name="pref_key_localaudioplayer_current_lastpos">se.splushii.dancingbunnies.pref_localaudioplayer_current_lastpost</string>
    <string name="pref_key_localaudioplayer_current_playlist_pos">se.splushii.dancingbunnies.pref_localaudioplayer_current_playlist_pos</string>
    <string name="pref_key_localaudioplayer_current_playlist_selection_id">se.splushii.dancingbunnies.pref_localaudioplayer_current_playlist_selection_id</string>
    <string name="fastscroller_handle">Fastscroller handle</string>
    <string name="fastscroller_bubble">Fastscroller bubble</string>
    <string name="pause">pause</string>
    <string name="next">next</string>
    <string name="previous">previous</string>
    <string name="stop">stop</string>
    <string name="play">play</string>
    <string name="item_action_remove">Remove</string>
    <string name="item_action_play">Play</string>
    <string name="item_action_queue">Queue</string>
    <string name="item_action_info">Info</string>
    <string name="item_action_delete">Delete</string>
    <string name="item_action_queue_delete">Remove from queue</string>
    <string name="item_action_more">More</string>
    <string name="item_action_cache">Cache</string>
    <string name="item_action_cache_delete">Delete cache</string>
    <string name="item_action_history_delete">Remove from history</string>
    <string name="item_action_play_playlist">Play playlist from this position</string>
    <string name="item_action_delete_playlist">Delete playlist</string>
    <string name="item_action_add_to_playlist">Add to playlist</string>
    <string name="item_action_remove_from_playlist">Remove from playlist</string>
    <string name="item_action_edit_meta">Edit metadata tag</string>
    <string name="item_action_delete_meta">Delete metadata tag</string>
    <string name="item_action_goto_meta">Show all entries for tag</string>
    <string name="item_action_shuffle_selection">Shuffle selected entries</string>
    <string name="item_action_sort_selection">Sort selected entries</string>
    <string name="item_action_queue_clear">Clear queue</string>
    <string name="item_action_history_clear">Clear history</string>
    <string name="song_info" />
    <string name="search_hint">…</string>
    <string name="app_label">Dancing Bunnies</string>
    <string name="action_search">Search</string>
    <string name="enter_filter">Enter filter</string>
    <string name="media_route_menu_title">Cast</string>
    <string name="playlist_context_play">Play</string>
    <string name="playlist_context_dequeue">Dequeue</string>
    <string name="playlist_context_remove">Remove</string>
    <string name="playlist_item_more_actions">Playlist item more actions</string>
    <string name="playlist_new_playlist_name">Name:</string>
    <string name="playlist_new_playlist_name_hint">New playlist name</string>
    <string name="playlist_action_select">Select</string>
    <string name="nowplaying_buffering">buffering…</string>
    <string name="nowplaying_previous_contentdesc">Skip to previous</string>
    <string name="nowplaying_play_pause_contentdesc">Play or pause</string>
    <string name="nowplaying_next_contentdesc">Skip to next</string>
    <string name="nowplaying_context_play">Play</string>
    <string name="nowplaying_actionmode_action_play">Play</string>
    <string name="nowplaying_actions">Actions</string>
    <string name="musiclibrary_entry_type_select">Show:</string>
    <string name="musiclibrary_sort_select">Sort by:</string>
    <string name="musiclibrary_sort_order">Sort order</string>
    <string name="musiclibrary_home">Home</string>
    <string name="musiclibrary_item_more_actions">Music library item more actions</string>
    <string name="musiclibrary_query">Show query</string>
    <string name="musiclibrary_query_save">Save query</string>
    <string name="musiclibrary_query_filter">Filter</string>
    <string name="musiclibrary_query_all">All</string>
    <string name="musiclibrary_query_any">Any</string>
    <string name="musiclibrary_query_notall">Not all</string>
    <string name="musiclibrary_query_none">None</string>
    <string name="item_source">Item source</string>
    <string name="preload_status">Preload status</string>
    <string name="cached">Cached</string>
    <string name="playlist_deselect">Deselect playlist</string>
    <string name="playlist_repeat">Repeat</string>
    <string name="playlist_random">Random</string>
    <string name="metadata">Metadata</string>
    <string name="metadata_add">Add metadata</string>
    <string name="metadata_add_local">Local tag:</string>
    <string name="metadata_add_title">Adding new tag</string>
    <string name="meta_key">Key</string>
    <string name="meta_value">Value</string>
    <string name="entry_type_selection_selected_types_and_order">Selected types and order</string>
    <string name="entry_type_selection_available_types">Available types</string>
    <string name="submit">Submit</string>
    <string name="selected_media_route">Selected media route</string>
</resources>