<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.OnAccent"
    android:orientation="horizontal"
    android:background="@drawable/item_actions_background"
    android:layout_marginStart="16dp"
    android:layout_gravity="end|center_vertical">
    <ImageButton
        android:id="@+id/item_action_remove"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_delete_white_24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:contentDescription="@string/item_action_remove" />
    <ImageButton
        android:id="@+id/item_action_play"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_play_arrow_white_24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:contentDescription="@string/item_action_play" />
    <ImageButton
        android:id="@+id/item_action_queue"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_queue_white_24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:contentDescription="@string/item_action_queue" />
    <ImageButton
        android:id="@+id/item_action_add_to_playlist"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_playlist_add_white_24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:contentDescription="@string/item_action_add_to_playlist" />
    <ImageButton
        android:id="@+id/item_action_play_playlist"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_playlist_play_white_24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:contentDescription="@string/item_action_play_playlist" />
    <ImageButton
        android:id="@+id/item_action_info"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_info_white_24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:contentDescription="@string/item_action_info" />
    <ImageButton
        android:id="@+id/item_action_more"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/ic_more_vert_white_24dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:contentDescription="More"/>
</LinearLayout>