<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <TextView
        android:id="@+id/sort_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="16dp"
        android:background="@color/colorAccentDark"
        android:textColor="@color/colorTextOnAccent"
        android:fontFamily="sans-serif"
        android:textSize="18sp"
        android:text="@string/sort_entries"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/windowBackgroundLight"
        android:textColor="@color/text_active_on_accent"
        android:textSize="16sp"
        android:text="@string/entry_type_selection_selected_types_and_order"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/entry_type_selection_dialog_selected_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/windowBackground"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/windowBackgroundLight"
        android:textColor="@color/text_active_on_accent"
        android:textSize="16sp"
        android:text="@string/entry_type_selection_available_types"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/entry_type_selection_dialog_available_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/windowBackground"/>
    <ImageButton
        android:id="@+id/entry_type_selection_dialog_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:src="@drawable/ic_checked_checkbox"
        android:tint="@color/icon_active"
        android:background="@color/windowBackgroundLight"
        android:foreground="?android:selectableItemBackground"
        android:contentDescription="@string/submit"/>
</LinearLayout>