<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nowplaying_current_playlist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:background="@color/overlayBackground"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/nowplaying_current_playlist_info_layout"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:paddingEnd="8dp"
        android:clickable="true"
        android:background="?android:selectableItemBackground"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="8dp"
            android:paddingBottom="4dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Playing from:"
                android:textColor="@color/colorTextSecondary"/>
            <TextView
                android:id="@+id/nowplaying_current_playlist_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/colorText"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">
            <ImageView
                android:id="@+id/nowplaying_current_ordered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playlist_random"
                app:tint="@color/colorAccent" />
            <ImageView
                android:id="@+id/nowplaying_current_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/playlist_repeat"
                app:tint="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>
    <ImageButton
        android:id="@+id/nowplaying_current_playlist_deselect"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_cancel_red_24dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/playlist_deselect"/>
</LinearLayout>